# dezero

./: .gitignore  .prettierrc  README.md  pyproject.toml
.github/workflows/: ci.yml
src/dezero/: __init__.py  core.py  core_simple.py  functions.py  utils.py
steps/: step01.py  step02.py  step03.py  step04.py  step06.py  step07.py  step08.py  step09.py  step10.py  step11.py  step12.py  step13.py  step14.py  step16.py  step17.py  step18.py  step19.py  step20.py  step21.py  step22.py  step23.py  step24.py  step26.py  step27.py  step28.py  step29.py  step33.py  step36.py  step42.py  step43.py
tests/dezero/: test_add.py  test_div.py  test_mul.py  test_neg.py  test_pow.py  test_sub.py
tests/dezero/functions/: test_broadcast.py  test_cos.py  test_matmul.py  test_reshape.py  test_sin.py  test_sum.py  test_tanh.py  test_transpose.py
tests/step10/: test_1_to_10.py
tests/step12/: test_12.py
tests/steps/: test_13.py  test_14.py  test_19.py  test_20.py  test_21.py  test_22.py
