[project]
name = "dezero"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "YuH25JP", email = "cppyuh@gmail.com" }
]
requires-python = ">=3.12"
dependencies = [
    "numpy>=2.3.4",
]

[build-system]
requires = ["uv_build>=0.9.4,<0.10.0"]
build-backend = "uv_build"

[tool.basedpyright]
typeCheckingMode = "standard"
reportAny = "none"

[tool.ruff]
target-version = "py314"

[tool.pytest.ini_options]
pythonpath = ["src", "."]
testpaths = ["tests"]

[dependency-groups]
dev = [
    "pytest>=8.4.2",
    "pytest-cov>=7.0.0",
]
